--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "Car Racer",
+  "name": "Car-Racer",
   "version": "1.0.0",
-  "description": "Car Racer Game",
+  "description": "Car Racing Game",
   "main": "index.js",
+  "repository": "https://github.com/sahilm9/Car-Racer.git",
   "author": "Sahil Mokkapati",
+  "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^8.6.0",
     "babel-core": "^6.26.3",
@@ -12,9 +14,12 @@
     "browser-sync": "^2.24.4",
     "gulp": "^3.9.1",
     "gulp-postcss": "^7.0.1",
-    "gulp-watch": "^5.0.0"
+    "gulp-watch": "^5.0.0",
+    "postcss-import": "^11.1.0",
+    "postcss-nested": "^3.0.0"
   },
   "dependencies": {
+    "normalize.css": "^8.0.0",
     "webpack": "3.8.1"
   }
 }
