--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.24.4",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-cssnano": "^2.1.3",
     "gulp-postcss": "^7.0.1",
+    "gulp-rev": "^8.1.1",
+    "gulp-uglify": "^3.0.0",
+    "gulp-usemin": "^0.3.29",
     "gulp-watch": "^5.0.0",
     "postcss-import": "^11.1.0",
     "postcss-nested": "^3.0.0"
   },
   "dependencies": {
+    "jquery": "^3.3.1",
     "normalize.css": "^8.0.0",
     "webpack": "3.8.1"
   }
