--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^4.1.0",
     "gulp-postcss": "^7.0.1",
     "gulp-rev": "^8.1.1",
     "gulp-uglify": "^3.0.0",
